# uv-fastapi

./: .gitignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  pyproject.toml  requirements.txt
backend/: dd.py  dev.db  main.py  pyproject.toml  schema.prisma
workspace/: main.py
