[project]
name = "t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "icecream>=2.1.4",
    "prisma>=0.15.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
